# llm-chat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/plans/: declarative-meandering-plum.md  modular-percolating-cray.md  resilient-inventing-peacock.md
.github/workflows/: frontend-ci.yml
agent/: .dockerignore  pyproject.toml
agent/src/: __init__.py  agent.py  history_normalizer.py  main.py  provider_capabilities.py  providers.py  subagents.py
agent/src/mcp/: __init__.py  client.py  manager.py
agent/src/prompts/: __init__.py  assembler.py  base.py  behaviors.py  mcp.py  tools.py
agent/src/prompts/presets/: __init__.py  claude_ai.py  claude_code.py  claude_cowork.py  default.py
agent/src/provider_contracts/: __init__.py  anthropic.py  base.py  google.py  mistral.py  openai.py
agent/src/tools/: __init__.py  _media.py  _paths.py  bash.py  capabilities.py  code_interpreter.py  explore.py  file_ops.py  image_gen.py  list_tool.py  question.py  result_schema.py  search.py  task.py  web.py
agent/tests/: conftest.py  result_helpers.py  test_agent.py  test_agent_tool_integration.py  test_capabilities.py  test_history_normalizer.py  test_image_gen.py  test_image_gen_integration.py  test_main.py  test_mcp.py  test_media.py  test_new_coverage.py  test_presets.py  test_prompts.py  test_provider_capabilities_registry.py  test_provider_contracts.py  test_providers.py  test_subagents.py  test_tools.py
backend/: Cargo.toml
backend/src/: backfill.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  prompts.rs
backend/src/api/: admin.rs  auth.rs  conversations.rs  files.rs  mod.rs  presets.rs  sharing.rs  users.rs
backend/src/auth/: middleware.rs  mod.rs  password.rs
backend/src/db/: conversations.rs  mcp_servers.rs  messages.rs  messages_v2.rs  mod.rs  model_defaults.rs  presets.rs  providers.rs  refresh_tokens.rs  users.rs
backend/src/docker/: manager.rs  registry.rs
backend/src/prompts_content/: claude_ai.txt  claude_code.txt  claude_cowork.txt  default.txt
backend/src/ws/: client.rs  container.rs  messages.rs  mod.rs
backend/tests/: auth_handlers.rs  conversation_handlers.rs  files_handlers.rs  presets_handlers.rs  sharing_handlers.rs  users_handlers.rs
docker/: Dockerfile.agent  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: agent-review-guide.md  backend-review-guide.md  claude-ai-prompt-tools-analysis.md  frontend-review-guide.md  opencode-tools-comparison-2026-02-18.md
frontend/: components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/__tests__/api/: auth.test.ts  client.test.ts  (+2 more)
frontend/src/api/: auth.ts  client.ts  conversations.ts  prompts.ts  sharing.ts  users.ts  websocket.ts
frontend/src/components/: ChatInput.vue  ChatMessage.vue  ConversationList.vue  FileBrowser.vue  LocaleToggle.vue  McpServerConfig.vue  QuestionFlow.vue  ToolCallDisplay.vue
frontend/src/constants/: providers.ts
frontend/src/i18n/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  chat.ts  settings.ts
frontend/src/styles/: global.css  variables.css
frontend/src/types/: index.ts
frontend/src/utils/: fileUrl.ts
frontend/src/views/: Chat.vue  Login.vue  Register.vue  Settings.vue  SharedChat.vue
migrations/: 001_initial.sql  002_provider_models.sql  003_provider_name.sql  004_user_presets.sql  005_conversation_deep_thinking.sql  20240101000000_initial_schema.sql  20240201000000_image_model_separation.sql  20240301000000_conversation_sharing.sql  20240401000000_thinking_budget.sql  20240501000000_subagent_and_mcp_readonly.sql  20240601000000_backfill_subagent_defaults.sql  20240701000000_subagent_thinking_budget.sql  20240801000000_messages_v2_and_parts.sql  20240901000000_presets_allow_duplicate_names_and_backfill_cowork.sql  20241001000000_user_model_defaults.sql  20241101000000_builtin_preset_ids_and_backfill_all.sql  20241201000000_provider_identity_by_id.sql  20260220010000_fix_provider_id_backfill_ambiguity.sql
plans/: staged-skipping-lamport.md
(+13 files in other folders)
