[project]
name = "claude-chat-agent"
version = "0.1.0"
description = "AI chat agent with LangChain and MCP support"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.1",
    "langchain-mistralai>=0.2",
    "websockets>=14.0",
    "langchain-mcp-adapters>=0.2",
    "mcp>=1.0",
    "pydantic>=2.0",
    "httpx>=0.28",
    "httpx-sse>=0.4",
    "html2text>=2024.2",
    "tenacity>=9.0",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
