[package]
name = "claude-chat-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
bollard = "0.18"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
envy = "0.4"
tower = "0.5"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
